objects/GCR_Content_Document_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Other__c</fullName>
        <label>Acceptance(Other)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Acceptance__c</fullName>
        <label>Acceptance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upon Shipment/FTP</fullName>
                </value>
                <value>
                    <fullName>Upon Delivery/FTP</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name_Formula__c</fullName>
        <formula>Account_Name__r.Name</formula>
        <label>Account Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Override__c</fullName>
        <inlineHelpText>This text will override the account name on the customer invoice. Leave it blank if no override required.</inlineHelpText>
        <label>Account Name Override</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>GCR_Content_Document_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Contracts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Contracts</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.Expiration_Renewal_Date__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.Expiration_Renewal_Date__c</field>
                <operation>greaterOrEqual</operation>
                <value>1/25/2015</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Active Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Account_Name__r.Street1__c &amp; BR() &amp; Account_Name__r.City__c &amp; &apos; &apos; &amp; Account_Name__r.ZipCode__c &amp; &apos;, &apos; &amp; Account_Name__r.Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Master Partner</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller</fullName>
                </value>
                <value>
                    <fullName>Business Edition Premier Addendum</fullName>
                </value>
                <value>
                    <fullName>Cloud Partner</fullName>
                </value>
                <value>
                    <fullName>Cloud Reseller</fullName>
                </value>
                <value>
                    <fullName>Referral Program Partner</fullName>
                </value>
                <value>
                    <fullName>SDK with Dist. Rights</fullName>
                </value>
                <value>
                    <fullName>SDK without Dist. Rights</fullName>
                </value>
                <value>
                    <fullName>Single Customer Maint Only Reseller</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amendments__c</fullName>
        <label>Amendments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Edition Premise</fullName>
                </value>
                <value>
                    <fullName>Subcontrator</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag set when contract is approved. Indicates if ever the contract was approved.</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Renew_For_Period__c</fullName>
        <label>Auto Renew For Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Renew?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completion_of_Work_Other__c</fullName>
        <label>Completion of Work (Other)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completion_of_Work__c</fullName>
        <label>Completion of Work</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 Days</fullName>
                </value>
                <value>
                    <fullName>10 Days</fullName>
                </value>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Category__c</fullName>
        <label>Contract Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Combination__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Contract Combination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Document_Type__c</fullName>
        <label>Contract Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Documents</fullName>
                </value>
                <value>
                    <fullName>Purchasing Documents</fullName>
                </value>
                <value>
                    <fullName>Corporate Documents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Sub_Type__c</fullName>
        <label>Contract Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contract_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Reseller Agreement</fullName>
                </value>
                <value>
                    <fullName>Cloud Partner Agreement</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller Agreement</fullName>
                </value>
                <value>
                    <fullName>Other (Add text box)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adoption Agreement</fullName>
                </value>
                <value>
                    <fullName>Alliance Agreement</fullName>
                </value>
                <value>
                    <fullName>Assignment Agreement</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Business Associate Agreement</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Consulting Agreement</fullName>
                </value>
                <value>
                    <fullName>Correspondence</fullName>
                </value>
                <value>
                    <fullName>Distribution Agreement</fullName>
                </value>
                <value>
                    <fullName>Escrow Agreement</fullName>
                </value>
                <value>
                    <fullName>Evaluation Agreement</fullName>
                </value>
                <value>
                    <fullName>Interoperability Agreement</fullName>
                </value>
                <value>
                    <fullName>Joint Development Agreement</fullName>
                </value>
                <value>
                    <fullName>Joint Marketing Agreement</fullName>
                </value>
                <value>
                    <fullName>Letter of Engagement</fullName>
                </value>
                <value>
                    <fullName>Letter of Intent</fullName>
                </value>
                <value>
                    <fullName>Maintenance Agreement</fullName>
                </value>
                <value>
                    <fullName>Partner Agreement</fullName>
                </value>
                <value>
                    <fullName>Master Subscription Agreement</fullName>
                </value>
                <value>
                    <fullName>Memorandum of Understanding</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Agreement</fullName>
                </value>
                <value>
                    <fullName>OEM (Original Equipment Manufacturer)</fullName>
                </value>
                <value>
                    <fullName>Participation Agreement</fullName>
                </value>
                <value>
                    <fullName>Pre-Release</fullName>
                </value>
                <value>
                    <fullName>PS Agreement (for Clients)</fullName>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
                <value>
                    <fullName>Service Order</fullName>
                </value>
                <value>
                    <fullName>Statement of Work</fullName>
                </value>
                <value>
                    <fullName>Teaming Agreement</fullName>
                </value>
                <value>
                    <fullName>MSLSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contractual_Discounts__c</fullName>
        <label>Contractual Discounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Override__c</fullName>
        <description>Billing: Optional ISO 3166-1 alpha-2 country code to override when sending for tax</description>
        <inlineHelpText>Billing: Optional ISO 3166-1 alpha-2 country code to override when sending for tax</inlineHelpText>
        <label>Country Override</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Partner_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Partner Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Other__c</fullName>
        <label>Delivery (Other)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FTP</fullName>
                </value>
                <value>
                    <fullName>FOB Shipping Point</fullName>
                </value>
                <value>
                    <fullName>FOB Destination</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_1__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_2__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_3__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_1__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_2__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_3__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Sales_Rep_Override__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If that Sales Rep needs to be overridden, assign that User here. Monthly Billing Orders will be sent with a null Direct Sales Rep causing NetSuite to use the Direct Sales Rep stored there.</description>
        <inlineHelpText>If that Sales Rep needs to be overridden on Orders sent to NetSuite, assign that User here. Leave null to use the NetSuite Sales Rep.</inlineHelpText>
        <label>Direct Sales Rep Override</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocuSign_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuSign Status</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Docu_Sign_Status__c</fullName>
        <label>Docu Sign Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Renewal_Date__c</fullName>
        <label>Expiration/Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Attachment_Id__c</fullName>
        <label>Final Attachment Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Comments__c</fullName>
        <label>Finance Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>GCR_Content_Document_Folder__c</referenceTo>
        <relationshipName>GCR_Content_Document_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Free_Product_or_Service_not_Quoted__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Free Product or Service not Quoted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GCR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCR</label>
        <referenceTo>GCR__c</referenceTo>
        <relationshipName>GCR_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Genesys_Entity__c</fullName>
        <label>Genesys Entity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Genesys Telecommunications Laboratories, Inc.</fullName>
                </value>
                <value>
                    <fullName>Genesys Telecommunications Laboratories B.V.</fullName>
                </value>
                <value>
                    <fullName>Genesys University B.V. (Netherlands)</fullName>
                </value>
                <value>
                    <fullName>Genesys Laboratories Canada Inc.</fullName>
                </value>
                <value>
                    <fullName>Genesys Laboratories Australasia Pty Ltd</fullName>
                </value>
                <value>
                    <fullName>Genesys Lab de Telecom Ltd. (Brazil)</fullName>
                </value>
                <value>
                    <fullName>Genesys Japan Co. Ltd</fullName>
                </value>
                <value>
                    <fullName>Genesys Tele Comm Lab, Inc. (US) - Premier &amp; Outbound</fullName>
                </value>
                <value>
                    <fullName>Genesys Europe B.V.</fullName>
                </value>
                <value>
                    <fullName>Other (with a Text Box)</fullName>
                </value>
                <value>
                    <fullName>Echopass</fullName>
                </value>
                <value>
                    <fullName>Angel</fullName>
                </value>
                <value>
                    <fullName>SoundBite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Giants_UAT_Id__c</fullName>
        <description>The UAT Id for this contract</description>
        <externalId>true</externalId>
        <inlineHelpText>The UAT Id for this contract</inlineHelpText>
        <label>Giants UAT Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giants_UAT_Opportunity_Id__c</fullName>
        <description>The UAT Opportunity Id for this Contract. To eventually reference Quote in prodction back to the Contract Quote__c field</description>
        <inlineHelpText>The UAT Opportunity Id for this Contract. To eventually reference Quote in prodction back to the Contract Quote__c field</inlineHelpText>
        <label>Giants UAT Opportunity Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giants_UAT_Zuora_Quote_Id__c</fullName>
        <description>The UAT Zuora Quote I for this Contract. To eventually reference Zuora Quote in prodction back to the Contract Zuora_Quote__c field</description>
        <inlineHelpText>The UAT Zuora Quote I for this Contract. To eventually reference Zuora Quote in prodction back to the Contract Zuora_Quote__c field</inlineHelpText>
        <label>Giants UAT Zuora Quote Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Billing_Type__c</fullName>
        <description>Whether the rating processing should use. Standard inbound pricing model is where price is gathered from the Tier Set. Inbound Rate Table ignores the pricing in the Tier Set and gathers the price from the Inbound Rate Table. This processing will also apply the Flat Rate from the rate table for each number encountered during a billing month.</description>
        <inlineHelpText>Whether the rating processing should use. Standard inbound pricing model is where price is gathered from the Tier Set. Inbound Rate Table ignores the pricing in the Tier Set and gathers the price from the Inbound Rate Table.</inlineHelpText>
        <label>Inbound Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Inbound Rate Table</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Delivery_Type__c</fullName>
        <label>Invoice Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Electronic Other</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Both Email and Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Footer_Text__c</fullName>
        <inlineHelpText>Needed if footer is overriden</inlineHelpText>
        <label>Invoice Footer Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BEEEC</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Standard with Part Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsGoverningContract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsGoverningContract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Governing_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Governing Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_File_Name__c</fullName>
        <label>Legacy File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_File_Path__c</fullName>
        <label>Legacy File Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Approval_Signature_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Approval/Signature Configuration</label>
        <referenceTo>Legal_Approval_Configuration__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Exceptions__c</fullName>
        <description>What it Does? Review components for legal team 
Downstream Impact? Effects legal review process 
Which department is owner? Legal</description>
        <label>Legal Exceptions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Legal_Deal_Review</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Levers_Included__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Levers Included</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lever 1</fullName>
                </value>
                <value>
                    <fullName>Lever 2</fullName>
                </value>
                <value>
                    <fullName>Lever 3</fullName>
                </value>
                <value>
                    <fullName>Lever 4</fullName>
                </value>
                <value>
                    <fullName>Lever 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limitation_of_Liability__c</fullName>
        <label>Limitation of Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non-Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_Rate__c</fullName>
        <label>MA Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maint_SLA_Other__c</fullName>
        <label>Maintenance SLA(terms)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maint_SLA__c</fullName>
        <label>Maintenance SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non-Standard</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Rate__c</fullName>
        <label>Maintenance Rate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Maintenance_Type_Other__c</fullName>
        <label>Maintenance Type(Other)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maintenance_Type__c</fullName>
        <label>Maintenance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Care</fullName>
                </value>
                <value>
                    <fullName>Premium Care</fullName>
                </value>
                <value>
                    <fullName>Flex Care</fullName>
                </value>
                <value>
                    <fullName>Cloud Care</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Review_Reason__c</fullName>
        <description>For RMS</description>
        <label>Manual Review Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Review_Required__c</fullName>
        <description>Flag for RMS to identify to Finance if a manual review of the invoice is required.</description>
        <inlineHelpText>Flag for RMS to identify to Finance if a manual review of the invoice is required.</inlineHelpText>
        <label>Manual Review Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_Right_1__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Material Right 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_Right_2__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Material Right 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_Right_3__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Material Right 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>This field is used as Name in finance Section.</description>
        <label>Friendly Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>